# swagger/swagger.json
@@ -197,10 +197,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/app.ThingResponse"
-                        }
+                        "description": "Empty response"
                     },
                     "500": {
                         "description": "Internal Server Error",
